Publish first post

--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,14 @@ title: Contact
 
 Any mode of communication will work, I prefer using email.
 <ul>
-  <li>Email: <a href="{{ site.contact.email }}" target="_blank">
+  <li>Email: <a href="mailto:{{ site.contact.email }}" target="_blank">
     {{ site.contact.email }}</a></li>
-  <li>Twitter<a href="{{ site.contact.twitter }}" target="_blank">
+  <li>Twitter: <a href="{{ site.contact.twitter }}" target="_blank">
     {{ site.contact.twitter }}</a></li>
-  <li>AngleList<a href="{{ site.contact.angellist }}" target="_blank">
+  <li>AngleList: <a href="{{ site.contact.angellist }}" target="_blank">
     {{ site.contact.angellist }}</a></li>
-  <li>About.me<a href="{{ site.contact.aboutme }}" target="_blank">
+  <li>About.me: <a href="{{ site.contact.aboutme }}" target="_blank">
     {{ site.contact.aboutme }}</a></li>
-  <li>instagram<a href="{{ site.contact.instagram }}" target="_blank">
+  <li>Instagram: <a href="{{ site.contact.instagram }}" target="_blank">
     {{ site.contact.instagram }}</a></li>
 </ul>
