Add linkedin link and fix broken image links

--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@ Any mode of communication will work, I prefer using email.
   <li>Email: <a href="mailto:{{ site.contact.email }}" target="_blank">
     {{ site.contact.email }}</a></li>
   <li>Twitter: <a href="{{ site.contact.twitter }}" target="_blank">
-    {{ site.contact.twitter }}</a></li>
+      {{ site.contact.twitter }}</a></li>
+  <li>LinkedIn: <a href="{{ site.links.linkedin }}" target="_blank">
+      {{ site.links.linkedin }}</a></li>
   <li>AngleList: <a href="{{ site.contact.angellist }}" target="_blank">
-    {{ site.contact.angellist }}</a></li>
-  <li>About.me: <a href="{{ site.contact.aboutme }}" target="_blank">
-    {{ site.contact.aboutme }}</a></li>
+      {{ site.contact.angellist }}</a></li>
   <li>Instagram: <a href="{{ site.contact.instagram }}" target="_blank">
     {{ site.contact.instagram }}</a></li>
 </ul>
